examples/invalid/03_offer_missing_type_annotation.lane
// invalid: offered value definitions must include an explicit type annotation
offer constants = Constants::{ answer: 42 }

struct Constants {
  answer : Int
}
